feat: add favicon

--- a/travel/assets/index.html
+++ b/travel/assets/index.html
@@ -6,11 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/img/vsc.ico">
 </head>
 <body>
-    <header class="header">
-        <p>Login Login Login Login</p>
-    </header>
-    
+    <header class="header"></header>
+        <div class="container"></div>
+    <main class="main"></main>
+        <div class="container"></div>
+            <section class="preview"></section>
+            <section class="steps"></section>
+            <section class="destinations"></section>
+            <section class="stories"></section>
+    <footer class="footer"></footer>
+        <div class="container"></div>    
 </body>
 </html>
