--- a/travel/index.html
+++ b/travel/index.html
@@ -48,12 +48,22 @@
     </div>
                 
     <main class="main">
-        <div class="container">
-            <section class="preview"></section>
-            <section class="steps"></section>
+        <div class="main-container">
+            <section class="three-steps">
+                <h2 class="three-steps-title">3 steps to the perfect trip</h2>
+                <div class="three-steps-img">
+                    <img class="pic-1" src="assets/img/Frame 28.jpg" alt="cyclist pic">
+                    <img class="pic-2" src="assets/img/Frame 11.jpg" alt="calendar pic">
+                    <img class="pic-3" src="assets/img/Frame 12.jpg" alt="airplane pic">
+                </div>
+                <div class="three-steps-text">
+                    <p class="text-1">Tell us what you want to do</p>
+                    <p class="text-2">Share us preferable dates </p>
+                    <p class="text-3">We will give you recommendations</p>
+                </div>
+            </section>
             <section class="destinations"></section>
             <section class="stories"></section>
-        </div>  
     </main>
         
     <footer class="footer">
