--- a/travel/index.html
+++ b/travel/index.html
@@ -49,7 +49,7 @@
                 
     <main class="main">
         <div class="main-container">
-            <section class="three-steps">
+            <section class="steps">
                 <h2 class="three-steps-title">3 steps to the perfect trip</h2>
                 <div class="three-steps-img">
                     <img class="pic-1" src="assets/img/Frame 28.jpg" alt="cyclist pic">
@@ -62,8 +62,28 @@
                     <p class="text-3">We will give you recommendations</p>
                 </div>
             </section>
-            <section class="destinations"></section>
+            <section class="destinations">
+                <h2 class="destinations-title">Popular destinations</h2>
+                <div class="destinations-img">
+                    <img class="slider-pic1" src="assets/img/Rectangle23.jpg" alt="slider pic1">
+                    <img class="slider-pic2" src="assets/img/Rectangle24.jpg" alt="slider pic2">
+                    <img class="slider-pic3" src="assets/img/Rectangle25.jpg" alt="slider pic3">
+                </div>
+                <div class=""></div>
+                <div class="slider-ellips">
+                    <img src="assets/img/Ellipse1.jpg" alt="slider ellips">
+                    <img src="assets/img/Ellipse.jpg" alt="slider ellips">
+                    <img src="assets/img/Ellipse1.jpg" alt="slider ellips">
+                </div>
+                <div class="button-container">
+                    <button class="find-button">
+                        <img class="arrow-ico" src="assets/img/arrow.svg" alt="arrow ico">
+                        <a class="find-link" href="">Find More</a>
+                    </button>
+                </div>
+            </section>
             <section class="stories"></section>
+        </div>
     </main>
         
     <footer class="footer">
