feat: implement other sections

--- a/travel/index.html
+++ b/travel/index.html
@@ -84,10 +84,9 @@
             </section>
         </div>
     </main>
-    
-    <div class="wrapper-section-footer">
-        <section class="stories">
-            <h2 class="stories-title">Travel stories</h2>
+    <section class="stories">
+        <h2 class="stories-title">Travel stories</h2>
+        <div class="wrapper-section-footer">
             <div class="stories-wrapper">
                 <div class="stories-img-container">
                     <img class="story-img1" src="assets/img/Rectangle 29.jpg" alt="story-pic1">
@@ -152,18 +151,17 @@
                     <a class="find-link" href="">See More</a>
                 </button>
             </div>
-        </section>
-        <footer class="footer">
-            <div class="container">
+            <footer class="footer">
                 <div class="footer-container">
-                    <div>
+                    <p class="footer-text">All Rights Reserved © Travel Portal</p>
+                    <!-- <div>
                         &copy; 2022
                         <a href="https://github.com/dmitry-hcp" class="github-link" target="_blank">dmitry-hcp</a>
                     </div>
-                    <a href="https://rs.school/js-stage0/" class="school-logo" target="_blank"> <img src="assets/img/rs_school_js.svg" alt="school-logo"></a>
+                    <a href="https://rs.school/js-stage0/" class="school-logo" target="_blank"> <img src="assets/img/rs_school_js.svg" alt="school-logo"></a> -->
                 </div> 
-            </div> 
-        </footer>
-    </div>   
+            </footer>
+        </div>
+    </section>           
 </body>
 </html>
