feat: implement header-preview

--- a/travel/index.html
+++ b/travel/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,8 +26,9 @@
                 </nav>
                 <p class="button-path">
                     <button class="login-button"><a href="" class="login-link">Login</a></button>
-                </p>
-            </div>        
+                </p> 
+                <img  class="burger-pic" src="assets/img/burger.svg" alt="burger menu pic">
+            </div>      
         </header>
         <section class="preview">
             <h1 class="preview-section-title">
@@ -52,9 +53,9 @@
             <section class="steps">
                 <h2 class="three-steps-title">3 steps to the perfect trip</h2>
                 <div class="three-steps-img">
-                    <img class="pic-1" src="assets/img/Frame 28.jpg" alt="cyclist pic">
-                    <img class="pic-2" src="assets/img/Frame 11.jpg" alt="calendar pic">
-                    <img class="pic-3" src="assets/img/Frame 12.jpg" alt="airplane pic">
+                    <img class="pic-1" src="assets/img/Frame28.jpg" alt="cyclist pic">
+                    <img class="pic-2" src="assets/img/Frame11.jpg" alt="calendar pic">
+                    <img class="pic-3" src="assets/img/Frame12.jpg" alt="airplane pic">
                 </div>
                 <div class="three-steps-text">
                     <p class="text-1">Tell us what you want to do</p>
@@ -69,7 +70,6 @@
                     <img class="slider-pic2" src="assets/img/Rectangle24.jpg" alt="slider pic2">
                     <img class="slider-pic3" src="assets/img/Rectangle25.jpg" alt="slider pic3">
                 </div>
-                <div class=""></div>
                 <div class="slider-ellips">
                     <img src="assets/img/Ellipse1.jpg" alt="slider ellips">
                     <img src="assets/img/Ellipse.jpg" alt="slider ellips">
@@ -89,10 +89,10 @@
         <div class="wrapper-section-footer">
             <div class="stories-wrapper">
                 <div class="stories-img-container">
-                    <img class="story-img1" src="assets/img/Rectangle 29.jpg" alt="story-pic1">
-                    <img class="story-img2" src="assets/img/Rectangle 30.jpg" alt="story-pic2">
-                    <img class="story-img3" src="assets/img/Rectangle 31.jpg" alt="story-pic3">
-                    <img class="story-img4" src="assets/img/Rectangle 32.jpg" alt="story-pic4">
+                    <img class="story-img1" src="assets/img/Rectangle29.jpg" alt="story-pic1">
+                    <img class="story-img2" src="assets/img/Rectangle30.jpg" alt="story-pic2">
+                    <img class="story-img3" src="assets/img/Rectangle31.jpg" alt="story-pic3">
+                    <img class="story-img4" src="assets/img/Rectangle32.jpg" alt="story-pic4">
                 </div>
                 <div class="stories-container">
                     <div class="story1">   
