feat: implemet steps

--- a/travel/index.html
+++ b/travel/index.html
@@ -57,10 +57,20 @@
                     <img class="pic-2" src="assets/img/Frame11.jpg" alt="calendar pic">
                     <img class="pic-3" src="assets/img/Frame12.jpg" alt="airplane pic">
                 </div>
+                <div class="three-steps-img_mobile">
+                    <img class="pic-4" src="assets/img/Frame13.svg" alt="cyclist pic">
+                    <img class="pic-5" src="assets/img/Frame14.svg" alt="calendar pic">
+                    <img class="pic-6" src="assets/img/Frame15.svg" alt="airplane pic">
+                </div>
                 <div class="three-steps-text">
                     <p class="text-1">Tell us what you want to do</p>
                     <p class="text-2">Share us preferable dates </p>
                     <p class="text-3">We will give you recommendations</p>
+                </div>
+                <div class="three-steps-text_mobile">
+                    <p class="text-4">Tell us what you <br> want to do</p>
+                    <p class="text-5">Share us preferable dates </p>
+                    <p class="text-6">We will give you <br> recommendations</p>
                 </div>
             </section>
             <section class="destinations">
