--- a/travel/index.html
+++ b/travel/index.html
@@ -80,6 +80,16 @@
                     <img class="slider-pic2" src="assets/img/Rectangle24.jpg" alt="slider pic2">
                     <img class="slider-pic3" src="assets/img/Rectangle25.jpg" alt="slider pic3">
                 </div>
+                <div class="destinations-img-mobile">
+                    <!-- <img class="slider-pic4" src="assets/img/Rectangle26_mobile.jpg" alt="slider pic4">
+                    <img class="slider-pic2" src="assets/img/Rectangle24.jpg" alt="slider pic2">
+                    <img class="slider-pic3" src="assets/img/Rectangle25.jpg" alt="slider pic3"> -->
+                    <p class="contry">Spain</p>
+                    <div class="slider arrows">
+                        <img class="slider-arrow-left" src="assets/img/slider_arrow_left.svg" alt="slider arrow left">
+                        <img class="slider-arrow-right" src="assets/img/slider_arrow_right.svg" alt="slider arrow rigth">
+                    </div>
+                </div>
                 <div class="slider-ellips">
                     <img src="assets/img/Ellipse1.jpg" alt="slider ellips">
                     <img src="assets/img/Ellipse.jpg" alt="slider ellips">
