feat: implemet destinations

--- a/travel/index.html
+++ b/travel/index.html
@@ -81,13 +81,15 @@
                     <img class="slider-pic3" src="assets/img/Rectangle25.jpg" alt="slider pic3">
                 </div>
                 <div class="destinations-img-mobile">
-                    <!-- <img class="slider-pic4" src="assets/img/Rectangle26_mobile.jpg" alt="slider pic4">
-                    <img class="slider-pic2" src="assets/img/Rectangle24.jpg" alt="slider pic2">
-                    <img class="slider-pic3" src="assets/img/Rectangle25.jpg" alt="slider pic3"> -->
                     <p class="contry">Spain</p>
-                    <div class="slider arrows">
+                    <div class="slider-arrows">
                         <img class="slider-arrow-left" src="assets/img/slider_arrow_left.svg" alt="slider arrow left">
                         <img class="slider-arrow-right" src="assets/img/slider_arrow_right.svg" alt="slider arrow rigth">
+                    </div>
+                    <div class="slider-ellipse-mobile">
+                        <img src="assets/img/Ellipse2.svg" alt="slider ellips">
+                        <img src="assets/img/Ellipse1.svg" alt="slider ellips">
+                        <img src="assets/img/Ellipse2.svg" alt="slider ellips">                        
                     </div>
                 </div>
                 <div class="slider-ellips">
@@ -98,6 +100,7 @@
                 <div class="button-container">
                     <button class="find-button">
                         <img class="arrow-ico" src="assets/img/arrow.svg" alt="arrow ico">
+                        <img class="arrow-ico-mobile" src="assets/img/buttom_arrow_mobile.svg" alt="arrow ico">
                         <a class="find-link" href="">Find More</a>
                     </button>
                 </div>
