feat: fix desktop version

--- a/travel/index.html
+++ b/travel/index.html
@@ -109,80 +109,91 @@
     </main>
     <section class="stories">
         <h2 class="stories-title">Travel stories</h2>
-        <div class="wrapper-section-footer">
-            <div class="stories-wrapper">
-                <div class="stories-img-container">
-                    <img class="story-img1" src="assets/img/Rectangle29.jpg" alt="story-pic1">
-                    <img class="story-img2" src="assets/img/Rectangle30.jpg" alt="story-pic2">
-                    <img class="story-img3" src="assets/img/Rectangle31.jpg" alt="story-pic3">
-                    <img class="story-img4" src="assets/img/Rectangle32.jpg" alt="story-pic4">
+        <div class="wrapper-stories-footer">
+            <div class="strories-button-wrapper">
+                <div class="stories-wrapper">
+                    <div class="stories-img-container">
+                        <img class="story-img1" src="assets/img/Rectangle29.jpg" alt="story-pic1">
+                        <img class="story-img2" src="assets/img/Rectangle30.jpg" alt="story-pic2">
+                        <img class="story-img3" src="assets/img/Rectangle31.jpg" alt="story-pic3">
+                        <img class="story-img4" src="assets/img/Rectangle32.jpg" alt="story-pic4">
+                    </div>
+                    <div class="stories-img-container-mobile">
+                        <img class="story-img5" src="assets/img/Rectangle15_mobile.jpg" alt="story-pic1">
+                        <img class="story-img6" src="assets/img/Rectangle16_mobile.jpg" alt="story-pic2">
+                        <img class="story-img7" src="assets/img/Rectangle18_mobile.jpg" alt="story-pic3">
+                        <img class="story-img8" src="assets/img/Rectangle17_mobile.jpg" alt="story-pic4">
+                    </div>
+                    <div class="stories-container">
+                        <div class="story1">   
+                            <h3 class="story-title1">10 Photos of Attractive Thailand</h3>
+                            <div class="story-text1">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
+                                <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                                <p>dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                                <p>mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                                <a class="story-link" href="">Read More</a>
+                            </div>                            
+                        </div>
+                        <div class="story2">
+                            <h3 class="story-title2">Canyonlands National Park, Utah</h3>
+                            <div class="story-text2">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
+                                <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                                <p>dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                                <p>mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                                <a class="story-link" href="">Read More</a>
+                            </div> 
+                        </div>
+                        <div class="story3">
+                            <h3 class="story-title3">I left my heart in the Mountains!</h3>
+                            <div class="story-text3">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
+                                <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                                <p>dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                                <p>mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                                <a class="story-link" href="">Read More</a>
+                            </div> 
+                        </div>
+                        <div class="story4">
+                            <h3 class="story-title4">The Longest journey in my life!</h3>
+                            <div class="story-text4">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                                <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
+                                <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+                                <p>dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                                <p>mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                                <a class="story-link" href="">Read More</a>
+                            </div> 
+                        </div>
+                    </div>
                 </div>
-                <div class="stories-container">
-                    <div class="story1">   
-                        <h3 class="story-title1">10 Photos of Attractive Thailand</h3>
-                        <div class="story-text1">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-                            <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
-                            <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
-                            <p>dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-                            <p>mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                            <a class="story-link" href="">Read More</a>
-                        </div>                            
-                    </div>
-                    <div class="story2">
-                        <h3 class="story-title2">Canyonlands National Park, Utah</h3>
-                        <div class="story-text2">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-                            <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
-                            <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
-                            <p>dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-                            <p>mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                            <a class="story-link" href="">Read More</a>
-                        </div> 
-                    </div>
-                    <div class="story3">
-                        <h3 class="story-title3">I left my heart in the Mountains!</h3>
-                        <div class="story-text3">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-                            <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
-                            <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
-                            <p>dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-                            <p>mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                            <a class="story-link" href="">Read More</a>
-                        </div> 
-                    </div>
-                    <div class="story4">
-                        <h3 class="story-title4">The Longest journey in my life!</h3>
-                        <div class="story-text4">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-                            <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
-                            <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
-                            <p>dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-                            <p>mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                            <a class="story-link" href="">Read More</a>
-                        </div> 
-                    </div>
+                <div class="stories-button-container">
+                    <button class="find-button">
+                        <img class="arrow-ico" src="assets/img/arrow.svg" alt="arrow ico">
+                        <a class="find-link" href="">See More</a>
+                    </button>
                 </div>
-            </div>
-            <div class="button-container">
-                <button class="find-button">
-                    <img class="arrow-ico" src="assets/img/arrow.svg" alt="arrow ico">
-                    <a class="find-link" href="">See More</a>
-                </button>
             </div>
             <footer class="footer">
-                <div class="footer-container">
-                    <p class="footer-text">All Rights Reserved © Travel Portal</p>
-                    <!-- <div>
-                        &copy; 2022
-                        <a href="https://github.com/dmitry-hcp" class="github-link" target="_blank">dmitry-hcp</a>
+                    <div class="copyright">
+                        <p class="copyright-ico">&copy; 2022</p>
+                        <a class="github-link" href="https://github.com/dmitry-hcp" target="_blank">dmitry-hcp</a>
+                        <a class="school-logo" href="https://rs.school/js-stage0/" target="_blank"> <img src="assets/img/rs_school_js.svg" alt="school-logo"></a>
                     </div>
-                    <a href="https://rs.school/js-stage0/" class="school-logo" target="_blank"> <img src="assets/img/rs_school_js.svg" alt="school-logo"></a> -->
-                </div> 
+                    <p class="footer-text">All Rights Reserved © Travel Portal</p>
+                    <div class="social-media-icons">
+                        <img src="assets/img/akar-icons_instagram-fill.svg" alt="inst-ico">
+                        <img src="assets/img/akar-icons_video.svg" alt="YT-ico">
+                        <img src="assets/img/akar-icons_twitter-fill.svg" alt="twitter-ico">
+                    </div>
             </footer>
         </div>
     </section>           
