feat: implemet html and css

--- a/travel/index.html
+++ b/travel/index.html
@@ -119,10 +119,10 @@
                         <img class="story-img4" src="assets/img/Rectangle32.jpg" alt="story-pic4">
                     </div>
                     <div class="stories-img-container-mobile">
-                        <img class="story-img5" src="assets/img/Rectangle15_mobile.jpg" alt="story-pic1">
-                        <img class="story-img6" src="assets/img/Rectangle16_mobile.jpg" alt="story-pic2">
-                        <img class="story-img7" src="assets/img/Rectangle18_mobile.jpg" alt="story-pic3">
-                        <img class="story-img8" src="assets/img/Rectangle17_mobile.jpg" alt="story-pic4">
+                        <img class="story-img-mobile" src="assets/img/Rectangle15_mobile.jpg" alt="story-pic1">
+                        <img class="story-img-mobile" src="assets/img/Rectangle16_mobile.jpg" alt="story-pic2">
+                        <img class="story-img-mobile" src="assets/img/Rectangle18_mobile.jpg" alt="story-pic3">
+                        <img class="story-img-mobile" src="assets/img/Rectangle17_mobile.jpg" alt="story-pic4">
                     </div>
                     <div class="stories-container">
                         <div class="story1">   
@@ -174,10 +174,65 @@
                             </div> 
                         </div>
                     </div>
+                    <div class="stories-container-mobile">
+                        <h3 class="story-title-mobile">10 Photos of Attractive Thailand</h3>
+                        <div class="story-text-mobile">
+                            <p>Lorem ipsum dolor sit amet, consectetur<br>
+                                adipiscing elit, sed do eiusmod tempor<br>
+                                incididunt ut labore et dolore magna aliqua. Ut<br>
+                                enim ad minim veniam, quis nostrud<br>
+                                exercitation ullamco laboris nisi ut aliquip ex ea<br>
+                                commodo consequat. Duis aute irure dolor in<br>
+                                reprehenderit in voluptate velit esse cillum<br>
+                                dolore eu fugiat nulla.Lorem ipsum dolor sit a...
+                            </p>
+                            <a class="story-link-mobile" href="">Read More</a>
+                        </div>
+                        <h3 class="story-title-mobile">Canyonlands National Park, Utah</h3>
+                        <div class="story-text-mobile">
+                            <p>Lorem ipsum dolor sit amet, consectetur<br>
+                                adipiscing elit, sed do eiusmod tempor<br>
+                                incididunt ut labore et dolore magna aliqua. Ut<br>
+                                enim ad minim veniam, quis nostrud<br>
+                                exercitation ullamco laboris nisi ut aliquip ex ea<br>
+                                commodo consequat. Duis aute irure dolor in<br>
+                                reprehenderit in voluptate velit esse cillum<br>
+                                dolore eu fugiat nulla.Lorem ipsum dolor sit a...
+                            </p>
+                            <a class="story-link-mobile" href="">Read More</a>
+                        </div>
+                        <h3 class="story-title-mobile">I left my heart in the Mountains!</h3>
+                        <div class="story-text-mobile">
+                            <p>Lorem ipsum dolor sit amet, consectetur<br>
+                                adipiscing elit, sed do eiusmod tempor<br>
+                                incididunt ut labore et dolore magna aliqua. Ut<br>
+                                enim ad minim veniam, quis nostrud<br>
+                                exercitation ullamco laboris nisi ut aliquip ex ea<br>
+                                commodo consequat. Duis aute irure dolor in<br>
+                                reprehenderit in voluptate velit esse cillum<br>
+                                dolore eu fugiat nulla.Lorem ipsum dolor sit a...
+                            </p>
+                            <a class="story-link-mobile" href="">Read More</a>
+                        </div>
+                        <h3 class="story-title-mobile">The Longest journey in my life!</h3>
+                        <div class="story-text-mobile">
+                            <p>Lorem ipsum dolor sit amet, consectetur<br>
+                                adipiscing elit, sed do eiusmod tempor<br>
+                                incididunt ut labore et dolore magna aliqua. Ut<br>
+                                enim ad minim veniam, quis nostrud<br>
+                                exercitation ullamco laboris nisi ut aliquip ex ea<br>
+                                commodo consequat. Duis aute irure dolor in<br>
+                                reprehenderit in voluptate velit esse cillum<br>
+                                dolore eu fugiat nulla.Lorem ipsum dolor sit a...
+                            </p>
+                            <a class="story-link-mobile" href="">Read More</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="stories-button-container">
-                    <button class="find-button">
+                    <button class="stories-button">
                         <img class="arrow-ico" src="assets/img/arrow.svg" alt="arrow ico">
+                        <img class="arrow-ico-mobile" src="assets/img/buttom_arrow_mobile.svg" alt="arrow ico">
                         <a class="find-link" href="">See More</a>
                     </button>
                 </div>
@@ -190,9 +245,9 @@
                     </div>
                     <p class="footer-text">All Rights Reserved © Travel Portal</p>
                     <div class="social-media-icons">
-                        <img src="assets/img/akar-icons_instagram-fill.svg" alt="inst-ico">
-                        <img src="assets/img/akar-icons_video.svg" alt="YT-ico">
-                        <img src="assets/img/akar-icons_twitter-fill.svg" alt="twitter-ico">
+                        <img class="inst-ico" src="assets/img/akar-icons_instagram-fill.svg" alt="inst-ico">
+                        <img class="YT-ico" src="assets/img/akar-icons_video.svg" alt="YT-ico">
+                        <img class="twitter-ico" src="assets/img/akar-icons_twitter-fill.svg" alt="twitter-ico">
                     </div>
             </footer>
         </div>
