feat: implement pop-up

--- a/travel/index.html
+++ b/travel/index.html
@@ -10,15 +10,53 @@
     <link rel="icon" href="assets/img/favicon.ico">
 </head>
 <body>
-    <!-- <script src="sscript.js"></script> -->
     <div class="pop-up hide">
         <div class="pop-up-container">
-            <div class="login-container">
-                <input type="text" value="" id="login">
-                <input type="text" value="" id="pass">
-                <button class="sign-in">push</button>
+            <!-- <div class="burger-menu">
+                <p></p>
+            </div> -->
+            <div class="pop-up-wrapper">
+                <h1 class="pop-up-header1 hide">Log in to your account</h1>
+                <h1 class="pop-up-header2 hide">Create account</h1>
+                <div class="social-wrapper hide">
+                    <button class="facebook">
+                        <img class="facebook-logo" src="assets/img/Facebook_Logo.svg" alt="Facebook_Logo">
+                        <span class="facebook-sign">Sign In with Facebook</span>
+                    </button>
+                    <button class="google">
+                        <img class="facebook-logo" src="assets/img/google_logo.svg" alt="Google_Logo">
+                        <span class="google-sign">Sign In with Google</span>
+                    </button>
+                </div>
+                <div class="lines hide">
+                    <div class="lines-wrapper">
+                        <p class="line-text">or</p>
+                    </div>
+                    <!-- <img  class="line-img" src="assets/img/Line.jpg" alt="line"> -->
+                    <!-- <p class="line-text">or</p> -->
+                    <!-- <img  class="line-img" src="assets/img/Line.jpg" alt="line"> -->
+                </div>
+                <div class="sign-in-container">
+                    <p class="input-title">E-mail</p>
+                    <input type="text" value="" id="login">
+                    <p class="input-title">Password</p>
+                    <input type="text" value="" id="pass">  
+                    <button class="sign-in-button">
+                        <span class="sign-in-text1 hide">Sign-In</span>
+                        <span class="sign-in-text2 hide">Sign-Up</span>
+                     </button>              
+                </div>
+                <p class="under-button-text hide">Forgot Your Password?</p>
+                <div class="line">
+                    <hr class="long-line">
+                </div>
+                <div class="register hide">
+                    <p class="register-text">Don’t have an account?<span class="register-link"> Register</span></p>
+                </div>
+                <div class="login hide">
+                    <p class="login-text">Already have an account?<span class="login-ref"> Log in</span></p>
+                </div>        
             </div>
-            <p class="register-link">Register</p>
         </div>
     </div>
     <div class="wrapper-header-preview">
@@ -60,7 +98,8 @@
         </section>
     </div>
                 
-    <main class="main">
+    <main class="main">       
+        </div>
         <div class="main-container">
             <section class="steps">
                 <h2 class="three-steps-title">3 steps to the perfect trip</h2>
