--- a/travel/index.html
+++ b/travel/index.html
@@ -10,11 +10,17 @@
     <link rel="icon" href="assets/img/favicon.ico">
 </head>
 <body>
+    <div class="burger-menu hide">
+        <div class="burger-menu-container"></div>
+        <p>How It Works</p>
+        <p>Plan Your Trip</p>
+        <p>Destinations</p>
+        <p>Travel Stories</p>
+        <p class="burger-link">Account</p>
+        <p>Social Media</p>
+    </div>
     <div class="pop-up hide">
         <div class="pop-up-container">
-            <!-- <div class="burger-menu">
-                <p></p>
-            </div> -->
             <div class="pop-up-wrapper">
                 <h1 class="pop-up-header1 hide">Log in to your account</h1>
                 <h1 class="pop-up-header2 hide">Create account</h1>
@@ -292,7 +298,7 @@
                     <div class="copyright">
                         <p class="copyright-ico">&copy; 2022</p>
                         <a class="github-link" href="https://github.com/dmitry-hcp" target="_blank">dmitry-hcp</a>
-                        <a class="school-logo" href="https://rs.school/js-stage0/" target="_blank"> <img src="assets/img/rs_school_js.svg" alt="school-logo"></a>
+                        <!-- <a class="school-logo" href="https://rs.school/js-stage0/" target="_blank"> <img src="assets/img/rs_school_js.svg" alt="school-logo"></a> -->
                     </div>
                     <p class="footer-text">All Rights Reserved © Travel Portal</p>
                     <div class="social-media-icons">
